k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: okctl-k8s-app-template
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 8080
    - name: https
      port: 443
      protocol: TCP
      targetPort: 8080
  selector:
    app: okctl-k8s-app-template
