k8s/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/actions.ssl-redirect: '{"Type":"redirect","RedirectConfig":{"Protocol":"HTTPS","Port":"443","StatusCode":"HTTP_301"}}'
    alb.ingress.kubernetes.io/certificate-arn: 	arn:aws:acm:eu-west-1:790988435217:certificate/665b0986-e1b1-4c51-9ff3-bf3e250a5dbc
    alb.ingress.kubernetes.io/healthcheck-path: /healthz
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
  name: okctl-k8s-app-template
spec:
  rules:
    - host: apptemplate.ykctl-ykprod.oslo.systems
      http:
        paths:
          - backend:
              serviceName: ssl-redirect
              servicePort: use-annotation
            path: /*
          - backend:
              serviceName: okctl-k8s-app-template
              servicePort: 80
            path: /
